# sysdoc

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.bat  build.sh  clippy.toml  deny.toml  docker-compose.yml  sysdoc.toml.example
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: audit.yml  ci.yml
docs/: README.md  pulldown-cmark-behavior.md  security.md  sysdoc-toml-schema.md  template-schema.md  tutorial.md
examples/: README.md
examples/complete-sdd/: README.md  sysdoc.toml
examples/complete-sdd/02-architecture/: architecture.md
examples/complete-sdd/02-architecture/tables/: components.csv
examples/complete-sdd/03-detailed-design/: index.md
examples/complete-sdd/03-detailed-design/02-data-component/: data-component.md
examples/complete-sdd/04-interfaces/: index.md
examples/complete-sdd/src/01-introduction/: 01.01_purpose.md
examples/complete-sdd/src/02-architecture/: 02.00_architecture.md  02.01_system-context.md  02.03_component-summary.md
examples/complete-sdd/src/03-detailed-design/: 03.01_ui-component.md
examples/complete-sdd/src/04-interfaces/: 04.00_interfaces.md  04.01_api-endpoints.md  api-endpoints.csv
examples/minimal-sdd/: README.md
examples/minimal-sdd/01-introduction/: introduction.md
examples/minimal-sdd/02-architecture/: architecture.md
examples/minimal-sdd/03-design/: design.md
examples/minimal-sdd/src/01-introduction/: 01.01_purpose.md  01.02_scope.md  (+1 more)
examples/templates/: README.md
examples/templates/DI-IPSC-81435B/: README.md
scripts/: validate-docx.ps1  validate-docx.sh
sysdoc/: Cargo.toml
sysdoc/examples/: generate_test_template.rs
sysdoc/src/: cli.rs  document_config.rs  document_model.rs  document_section.rs  docx_rs_exporter.rs  docx_rust_exporter.rs  docx_template_exporter.rs  html_exporter.rs  main.rs  markdown_exporter.rs  pdf_exporter.rs  pipeline.rs  source_model.rs  svg_converter.rs  template_config.rs  templates.rs  typst_exporter.rs  unified_document.rs  walker.rs
sysdoc/src/sandbox/: error.rs  linux.rs  mod.rs  noop.rs
sysdoc/src/source_model/: blocks.rs  error.rs  image.rs  markdown_source.rs  parser.rs  section_metadata.rs  section_number.rs  table.rs  text_run.rs  types.rs  validation.rs
sysdoc/src/templates/: idd-standard-v1.toml  sdd-standard-v1.toml  srs-standard-v1.toml  ssdd-standard-v1.toml  sss-standard-v1.toml  std-standard-v1.toml  stp-standard-v1.toml  str-standard-v1.toml  template.docx  tr-standard-v1.toml
sysdoc/tests/: integration_test.rs  test_template_loading.rs
templates/: README.md  sdd-standard-v1.toml  srs-standard-v1.toml
tests/fixtures/: README.md  template.docx
tests/fixtures/test-bold/: sysdoc.toml
tests/fixtures/test-csv-table/: sysdoc.toml
tests/fixtures/test-inline-table/: sysdoc.toml
tests/fixtures/test-italics/: sysdoc.toml
tests/fixtures/test-lists/: sysdoc.toml
tests/fixtures/test-normal-text/: sysdoc.toml
tests/fixtures/test-png-image/: sysdoc.toml
tests/fixtures/test-strikethrough/: sysdoc.toml
tests/fixtures/test-svg-image/: sysdoc.toml
(+25 files in other folders)
