[workspace]
resolver = "2"

members = [
    "sysdoc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
pulldown-cmark = "0.13"
walkdir = "2.5"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
