[package]
name = "sysdoc"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
clap = { workspace = true }
pulldown-cmark = { workspace = true }
walkdir = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
rayon = { version = "1.11", optional = true }
docx-rust = { workspace = true }
imagesize = { workspace = true }

[dev-dependencies]
pulldown-cmark = { workspace = true, features = ["default"] }
